# Contexly

./: .gitignore  AGENT_REFERENCE.md  CHANGELOG.md  CONTRIBUTING.md  DOCUMENTATION_INDEX.md  IMPACT_ANALYSIS.md  LICENSE  MCP_SETUP.md  MCP_TOOL_REFERENCE.md  README.md  REPO_STRUCTURE.md  contexly_mcp.py  mcp.example.json  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
agent-presets/: system_prompt_contexly.txt  task_prompt_template.txt
src/contexly/: __init__.py  mcp_server.py
src/contexly/agent/: context_manager.py  session.py  todo_engine.py
src/contexly/cli/: main.py
src/contexly/core/: extractor.py  languages.py  tree_builder.py  updater.py
src/contexly/ui/: tree_renderer.py
tests/: test_context_manager.py  test_extractor.py  test_go_extractor.py  test_multi_level.py  test_session.py  test_todo_engine.py
tests/fixtures/openclaw/: OPENCLAW_TEST_REPORT.md
