[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "contexly"
version = "0.1.0"
description = "Contexly codebase context engine - 1M lines to 35K tokens for any AI"
requires-python = ">=3.10"
license = {text = "MIT"}
readme = "README.md"
keywords = ["ai", "llm", "context", "tokens", "codebase", "claude", "cursor"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "tree-sitter>=0.21.0",
    "tree-sitter-python>=0.21.0",
    "tree-sitter-javascript>=0.21.0",
    "tree-sitter-typescript>=0.21.0",
    "tree-sitter-go>=0.21.0",
    "tree-sitter-c>=0.21.0",
    "tree-sitter-cpp>=0.21.0",
    "tree-sitter-java>=0.21.0",
    "tree-sitter-rust>=0.21.0",
    "tree-sitter-c-sharp>=0.21.0",
    "watchdog>=3.0.0",
    "click>=8.0.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "black",
    "ruff",
]

[project.scripts]
contexly = "contexly.cli.main:main"
contexly-mcp = "contexly.mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/contexly"]
